<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/pantalla_ajustes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ui.MainActivityAjustes">

    <!--Contenedor 2: para la imagen -->
    <LinearLayout
        android:id="@+id/contenedorImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_ajustes"
            style="@style/miToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize" />

        <!-- Primer Card -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="50dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                style="@style/temas_lenguaje"
                android:padding="8dp">


                <!-- Texto  Switch opcion 1-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/modo"
                    style="@style/texto_ajustes"
                    android:textSize="16sp" />

                <!-- Icono izquierdo Opcion 1 -->

                <!-- Switch Opcion 1-->
                <ImageView
                    android:id="@+id/icono_izquierdo_dia"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/descripcion_dia"
                    android:src="@drawable/sunny_24px" />

                <!-- Switch moderno, materialSwitch hay que agragar dependencia en el gradle.kts -->
                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_tema"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp" />

                <!-- Icono derecho Opcion 2 -->
                <ImageView
                    android:id="@+id/icono_derecho_noche"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/mode_night_24px"
                    android:contentDescription="@string/descripcion_noche"
                    />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="4dp"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                style="@style/temas_lenguaje"
                android:padding="8dp">


                <!-- Texto  Switch opcion 2-->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/idioma"
                    style="@style/texto_ajustes"
                    android:textSize="16sp" />

                <!-- Icono izquierdo Opcion 2-->


                <!-- Icono derecho opcion 2 -->
                <ImageView
                    android:id="@+id/icono_derecho_lenguaje"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/language_spanish_24px"
                    android:contentDescription="@string/descripcion_noche"
                    />

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switch_lenguaje"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp" />

                <!-- Switch opcion 2  -->
                <ImageView
                    android:id="@+id/icono_izquierdo_lenguaje"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/descripcion_dia"
                    android:src="@drawable/language_gb_english_24px" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>